    (Ie, use "dh $@ --foo", not "dh --foo $@")
    This avoids ambiguities when parsing options to be passed on to debhelper
    commands. (See #570039)
  * dh_installchangelogs: Support packages placing their changelog in a
    file with a name like HISTORY. Closes: #582749
  * dh_installchangelogs: Also look for changelog files in doc(s)
    subdirectories. Closes: #521258

 -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400

debhelper (7.4.20) unstable; urgency=low

  * Drop one more call to dpkg-architecture. Closes: #580837
    (Raphael Geissert)
  * Further reduce the number of calls to dpkg-architecture to zero,
    in a typical package with no explicit architecture mentions
    in control file or debhelper config files.
  * dh_perl: use debian_abi for XS modules. Closes: #581233

 -- Joey Hess <joeyh@debian.org>  Wed, 12 May 2010 20:06:02 -0400

debhelper (7.4.19) unstable; urgency=low

  * Memoize architecture comparisons in samearch, and avoid calling
    dpkg-architecture at all for simple comparisons that clearly
    do not involve architecture wildcards. Closes:# 579317

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 19:45:07 -0400

debhelper (7.4.18) unstable; urgency=low

  * dh_gconf: Depend on new gconf2 that uses triggers, and stop
    calling triggered programs manually. Closes: #577179

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 16:23:38 -0400

debhelper (7.4.17) unstable; urgency=low

  * Fix #572077 in one place I missed earlier. (See #576885)
  * dh: Fixed example of overriding binary target.
  * Began finalizing list of changes for v8 compat level.

 -- Joey Hess <joeyh@debian.org>  Thu, 08 Apr 2010 18:23:43 -0400

debhelper (7.4.16) unstable; urgency=low

  * Updated French translation.
  * makefile buildsystem: Chomp output during test for full compatibility
    with debhelper 7.4.11. Closes: #570503
  * dh_install: Now --list-missing and --fail-missing are useful even when