@@ -26,6 +26,9 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     file with a name like HISTORY. Closes: #582749
   * dh_installchangelogs: Also look for changelog files in doc(s)
     subdirectories. Closes: #521258
+  * In v8 mode, debhelper only ever acts on packages that can be built
+    for the given architecture, even if -N or -p are used to specify
+    packages specific to other architectures.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
